# wsl_docker_manager

./: .gitignore  CHANGELOG.md  README.md  dev.ps1  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/: App.tsx  i18n.ts  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: docker.rs  lib.rs  main.rs  remote_docker.rs  tray.rs  wsl_docker.rs
src-tauri/src/commands/: containers.rs  docker_status.rs  images.rs  mod.rs  networks.rs  volumes.rs
src/components/Containers/: ContainerList.tsx  ContainerLogs.tsx  ContainerTerminal.tsx
src/components/Dashboard/: ActiveContainers.tsx  Dashboard.tsx  DockerInfoCard.tsx  ExecutionLogPanel.tsx  ResourceRing.tsx
src/components/Images/: ImageList.tsx
src/components/Layout/: BackToTopButton.tsx  CloseBehaviorDialog.tsx  ConfirmDialog.tsx  DockerStatusBadge.tsx  GlobalLoadingOverlay.tsx  SettingsDialog.tsx  Sidebar.tsx  ToastViewport.tsx
src/components/Networks/: NetworkGraph.tsx
src/components/Volumes/: VolumeList.tsx
src/hooks/: useDocker.ts
src/store/: index.ts
src/types/: index.ts
src/utils/: executionLog.ts
