[package]
name = "wsl-docker-manager"
version = "1.0.1"
edition = "2021"

[lib]
name = "wsl_docker_manager_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
bollard = "0.18"
futures = "0.3"
sysinfo = "0.33"
chrono = "0.4"
encoding_rs = "0.8"
